# pothole-detection-code

./: LICENSE  README.md  app.py  paper.txt  pyproject.toml  report.txt  requirements.txt
artifacts/dashboard/: state.json
datasets/pothole_yolo/: README.md  data.yaml
datasets/pothole_yolo/labels/pseudo/: 20260507_055307_001481.txt
docs/: architecture.md  dataset.md
esp32/: esp32_rc_car.ino
esp32/esp32_cam_pothole/: esp32_cam_pothole.ino
esp32/esp32_rc_car/: esp32_rc_car.ino
scripts/: init_dataset.py  run_demo.sh
src/pothole_detection/: app.py  telemetry.py
src/pothole_detection/config/: default.toml  settings.py
src/pothole_detection/control/: policy.py  serial_bridge.py
src/pothole_detection/dashboard/: server.py
src/pothole_detection/learning/: online.py
src/pothole_detection/models/: depth.py  detector.py
src/pothole_detection/training/: yolo_dataset.py
src/pothole_detection/vision/: capture.py  geometry.py  wireframe.py
